--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
+    <!-- displays site properly based on user's adevice -->
     <link
       rel="icon"
       type="image/png"
@@ -24,14 +24,12 @@
       <div class="image-container">
       </div>
       <h2 class="card-title">Equilibrium #3429</h2>
-
       <p class="card-text">
         Our Equilibrium collection promotes balance and calm.
       </p>
 
       <p class="card-value">0.041 ETH</p>
       <p class="card-time">3 days left</p>
-
       <hr>
       <img class="creator-image" alt="creator-image" src="images/profiles-pic.png"/>
       <p class="creator-text">Creation of <strong>Adriano Dos Santos</strong></p>
